--- a/about/index.html
+++ b/about/index.html
@@ -41,6 +41,10 @@ I love to work on audiovisual and art projects where my creativity and rigor can
 </ul>
 <h4>Distinctions, Awards, Exhibitions</h4>
 <ul>
+<li>Spraying Board (2020) - <strong>Exhibition of live mapping installation <a href="https://sprayingboard.thedailyboard.co/">Spraying Board</a></strong></li>
+<li>Copenhagen Light Festival (2020) - <strong>Exhibition <a href="/livedrawing#content">The Live Drawing Project</a></strong></li>
+<li>Calgary Winter Lights Festival (2020) - <strong>Exhibition <a href="/livedrawing#content">The Live Drawing Project</a></strong></li>
+<li>Lyon Young and Culture House (2020)- <strong>Exhibition <a href="/humanlapseProject#content">Humanlapse</a></strong></li>
 <li>Le Creusot Video Game Festival (2019) - <strong>Exhibition <a href="/livedrawing#content">The Live Drawing Project</a></strong></li>
 <li>Lyon Young Film Festival (2019) - <strong>Projection &quot;Les étoiles du LYF&quot; <a href="/realite#content">Réalité</a></strong></li>
 <li>Citizen Global Film Festival (2019) - <strong>Official Selection <a href="/innocentWords#content">Innocent Words</a></strong></li>
