--- a/fr/about/index.html
+++ b/fr/about/index.html
@@ -2,7 +2,7 @@
 Proficient en réalisation vidéo, du tournage à la post-production. Formé ingénieur, je me specialise dans les <strong>technologies de l&#x27;audiovisuel et du développement logiciel</strong>.
 Je n&#x27;ai pas peur d&#x27;apprendre de nouveaux outils pour ouvrir de nouvelles possibilités créatives.</p><p><strong>Ouvert aux nouveaux projets</strong></p><p>— Contactez moi sur <a href="mailto:maxime.touroute@gmail.com">maxime.touroute@gmail.com</a></p><h4>Distinctions, Récompenses, Expositions</h4><ul><li><p>(A venir) A suivre sur <a href="http://facebook.com/maxime.touroute">Facebook</a> et <a href="http://instagram.com/maximetouroute">Instagram</a></p></li><li><p>(2021) <a href="https://www.chalondanslarue.com/">Chalon dans la Rue</a><br/>
 <strong>Premiere of <a href="/le-phare#content">Le Phare</a></strong></p></li><li><p>(2021) <a href="https://sprayingboard.thedailyboard.co/">Spraying Board (2nd Edition)</a><br/>
-<strong><a href="/livedrawing#content">Live Drawing</a></strong></p></li><li><p>(2021) City scale AR holographic dance experience
+<strong><a href="/livedrawing#content">Live Drawing</a></strong></p></li><li><p>(2021) City scale AR holographic dance experience<br/>
 <strong><a href="/spacedances#content">Lieux Miroir</a> at Aubusson</strong></p></li><li><p>(2021) Music Festival - Beijing<br/>
 <strong><a href="/monolith#content">Monolith</a> w <a href="https://www.institutfrancais.com">French Institute</a></strong></p></li><li><p>(2020) Novtec - Lima, Peru<br/>
 <strong>Remotely controlled Projection <a href="/livedrawing#content">Live Drawing</a></strong></p></li><li><p>(2020) Digital November - Copenhagen, Danemark<br/>
